<resources>
    <string name="app_name">View Pager 2</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="saved">Saved</string>
    <string name="profile">Profile</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="spider_on_leaf">Spider on leaf</string>
    <string name="discovery">Discovery</string>
    <string name="december_14_2006">December, 14 2006</string>
    <string name="recommended">Recommended</string>
    <string name="view_all">View All</string>
</resources>