<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageCategory"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/ic_category"
        android:tint="@color/primary_lable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/science_fiction"
        android:textColor="@color/primary_lable"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageCategory"
        app:layout_constraintStart_toEndOf="@id/imageCategory"
        app:layout_constraintTop_toTopOf="@id/imageCategory"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:src="@drawable/ic_arrow_down"
        android:tint="@color/primary_lable"
        app:layout_constraintBottom_toBottomOf="@id/textCategory"
        app:layout_constraintStart_toEndOf="@id/textCategory"
        app:layout_constraintTop_toTopOf="@id/textCategory"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/ic_notifications"
        android:tint="@color/secondary_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/backgound_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/imageCategory">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/ic_search"
            android:tint="@color/primary_lable"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_8sdp"
            android:background="@null"
            android:hint="Search"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/primary_lable"
            android:textColorHint="@color/secondary_label"
            android:textSize="@dimen/_13sdp"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRecommended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toTopOf="@id/smoothBottomBar">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageRecommendedMovie"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/spider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="@dimen/_8sdp" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageRecommendedMovie"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/spider_on_leaf"
                    android:textColor="@color/primary_lable"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"/>
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/discovery"
                    android:textColor="@color/secondary_label"
                    android:textSize="@dimen/_11sdp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/december_14_2006"
                    android:textColor="@color/secondary_label"
                    android:textSize="@dimen/_11sdp"/>

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="4.5"
                    />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:background="@drawable/backgorund_favorite"
                android:padding="5dp"
                android:src="@drawable/ic_favorite"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textRecommended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/recommended"
        android:textColor="@color/primary_lable"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/cardRecommended"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/textViewAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/view_all"
        android:textColor="@color/secondary_label"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="@id/textRecommended"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textRecommended"
        />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/moviesViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:paddingStart="@dimen/_50sdp"
        android:paddingEnd="@dimen/_50sdp"
        app:layout_constraintBottom_toTopOf="@id/textRecommended"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"/>


    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/smoothBottomBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:backgroundColor="@color/background"
        app:iconSize="@dimen/_19sdp"
        app:iconTint="@color/bottom_bar_icon_tint_active"
        app:indicatorColor="@color/bottom_bar_indicator_color"
        app:indicatorRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bottom_navigation"
        app:textColor="@color/bottom_bar_indicator_color"
        app:textSize="@dimen/_10ssp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>